UPDATE ::: Switching to using process builder directly isn't of Runtime.getRuntime
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@28028 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 359ca3245ecfc1926225ac7e3a1e7ca9fc960773